Prevent command buttons from moving on iOS

--- a/src/layouts/playing/Playing.scss
+++ b/src/layouts/playing/Playing.scss
@@ -3,4 +3,5 @@
     width: 100vw;
     display: grid;
     grid-template-rows: auto 1fr;
+    overflow: hidden;
 }
